--- a/index.html
+++ b/index.html
@@ -63,15 +63,24 @@ document.addEventListener("DOMContentLoaded", () => {
   let interval = null;
   let scrollTimeout = null;
 
+  const imgEl = document.createElement("img");
+  imgEl.src = images[0];
+  imgEl.style.position = "fixed";
+  imgEl.style.top = "50%";
+  imgEl.style.left = "50%";
+  imgEl.style.transform = "translate(-50%, -50%)";
+  imgEl.style.maxWidth = "300px";
+  imgEl.style.height = "auto";
+  imgEl.style.zIndex = "0";
+  imgEl.style.pointerEvents = "none";
+  document.body.appendChild(imgEl);
+
   function startBackgroundRotation() {
     if (interval) return;
     interval = setInterval(() => {
       index = (index + 1) % images.length;
-      document.body.style.backgroundImage = `url('${images[index]}')`;
-      document.body.style.backgroundSize = "cover";
-      document.body.style.backgroundPosition = "center";
-      document.body.style.backgroundRepeat = "no-repeat";
-    }, 80);
+      imgEl.src = images[index];
+    }, 200)
   }
 
   function stopBackgroundRotation() {
@@ -79,22 +88,25 @@ document.addEventListener("DOMContentLoaded", () => {
     interval = null;
   }
 
-  // Desktop: Scroll
-  if (!('ontouchstart' in window || navigator.maxTouchPoints > 0)) {
-    document.addEventListener('scroll', () => {
-      startBackgroundRotation();
-      clearTimeout(scrollTimeout);
-      scrollTimeout = setTimeout(stopBackgroundRotation, 50);
-    });
+  function handleScroll() {
+    startBackgroundRotation();
+    clearTimeout(scrollTimeout);
+    scrollTimeout = setTimeout(stopBackgroundRotation, 300);
   }
 
-  // Mobile: Touch
+  // Desktop
+  if (!('ontouchstart' in window || navigator.maxTouchPoints > 0)) {
+    document.addEventListener('scroll', handleScroll);
+  }
+
+  // Mobile
   if ('ontouchstart' in window || navigator.maxTouchPoints > 0) {
     document.addEventListener('touchstart', startBackgroundRotation);
     document.addEventListener('touchend', stopBackgroundRotation);
   }
 });
 </script>
+
 
      </body>
      </html>
