--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         
  <main>
 <h3 class="opener-text">
-I collaborate with clients to design visual, interactive and physical projects.
+I collaborate with clients to design visual, interactive and physical works.
 </h3>
  </main>
 
@@ -73,7 +73,7 @@ document.addEventListener("DOMContentLoaded", () => {
         linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)),
         url('${images[index]}')
       `;
-      document.body.style.backgroundSize = "300px auto"; // maximale Breite 300px
+      document.body.style.backgroundSize = "300px auto";
       document.body.style.backgroundPosition = "center";
       document.body.style.backgroundRepeat = "no-repeat";
     }, 80);
